image resizing & delete button class

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,5 +17,4 @@ block content
     script(id="entryListItemTemplate", type="text/x-handlebars")
         <img src={{image}} alt="image">
         <span>{{text}}</span>
-        <button type="button">Delete</button>
-
+        <button type="button" class="delete">Delete</button>
