--- a/views/index.jade
+++ b/views/index.jade
@@ -12,9 +12,13 @@ block content
         <a href="#" class="blog-link">{{name}}</a>
 
     script(id="blogDetailTemplate", type="text/x-handlebars")
-        <h1 class ="title">{{name}}</h1>
+        <h2 class ="title">{{name}}</h2>
+        <textarea class="entry-text" placeholder="Compose a new entry..."></textarea>
+        <input class="entry-image" placeholder="Image URL (optional)"></input>
+        <button class="post-entry">Submit</button>
 
     script(id="entryListItemTemplate", type="text/x-handlebars")
         <img src={{image}} alt="image">
         <span>{{text}}</span>
-        <button type="button" class="delete">Delete</button>
+        <button type="button" class="delete-entry">Delete</button>
+
