--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,12 +3,75 @@ body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
+a.blog-link {
     color: #00B7FF;
+    text-decoration: none;
+    font-size: 16px;
 }
 
 img {
     height: 100px;
     width: 100px;
     vertical-align: middle;
+}
+
+ul {
+    list-style-type: none;
+}
+
+ul.entries {
+    margin-left: 40%;
+}
+
+li {
+    margin-bottom: 20px;
+}
+
+textarea.entry-text {
+    font-family: inherit;
+    width: 30%;
+    height: 60px;
+    float: left;
+    clear: both;
+    margin-bottom: 20px;
+    padding: 6px;
+    color: #555;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+input.entry-image {
+    font-family: inherit;
+    width: 30%;
+    float: left;
+    clear: both;
+    margin-bottom: 20px;
+    padding: 6px;
+    color: #555;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+button {
+    font: inherit;
+    margin-bottom: 20px;
+    padding: 6px 12px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background-color: #3071a9;
+    color: #fff;
+    cursor: pointer;
+}
+
+button.post-entry {
+    float: left;
+    clear: both;
+}
+
+button.delete-entry {
+
 }
